# D4C_API

./: .gitignore  Dockerfile  README.rst  docker-compose.yml  models.py  pyproject.toml  requirements.txt  routes.py  test.py
Resources/: __init__.py  kitResource.py  measurementResource.py  sensorResource.py  valueResource.py
alembic/versions/: 100d9edc388a_file_type_added.py  2f8890edb6e2_file_type_added.py  4e62e0d755a8_init.py  6482584afc79_added_autogenerate.py  6b499b7fc09f_inference_type_added.py
app/: main.py  models.py  requirements.txt  routes.py  standalone_debug.py  test.py
app/Helpers/: EvictQueue.py  __init__.py  converters.py  custom_decorators.py  helper_functions.py
app/Models/: __init__.py  kit.py  manyToManyRelationships.py  measurement.py  sensor.py  value.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/versions/: 3063a986cba0_dataset_rename_and_started_dataset_db.py  5f203ae0e4c1_added_index.py  60ab7355bc44_dataset_models_started.py  6b499b7fc09f_users_added.py  cee530d427a0_1_to_many_relationship_added_for_label.py
backend/app/: main.py  utils.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: dataset.py  geo.py  inference.py  login.py  users.py
backend/app/core/: config.py  jwt.py
backend/app/crud/: __init__.py  dataset.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/db_models/: dataset.py
backend/app/models/: dbmodel.py  entry.py  kit.py  label.py  user.py
fast/: docker-compose.yml  pyproject.toml  requirements.txt
tensorflowServe/: Dockerfile  config.conf
(+60 files in other folders)
